@@ -1,5 +1,6 @@
 * Use 'type' rather than 'content_type', for compatibility with p5:CGI 
 (Mark Stosberg)
+* Only send the Content-Type header if we have a content-type (Mark Stosberg)
 == Changes for 0.2 Fri Aug 25 20:55:43 EDT 2006
 * Allow Initializing the object with your hash of params (Mark Stosberg)
 * Added new test for PATH_INFO (Mark Stosberg)
